added more info for user in date and functionality in datelist
-added functionality in the calendar view allows user to click on a day box in the calendar which will show activities, duration and total duration of all activities.

-day view additionally shows current total duration and remaining duration of all activities progress. also shows total overtime that a user has accumulated over all activities.

--- a/plantersinf/planner/templates/planner/date.html
+++ b/plantersinf/planner/templates/planner/date.html
@@ -509,7 +509,7 @@
 						</td>
 						<input type="hidden" class="activate" name="active_{{activity.id}}" id="active_{{activity.id}}" value="{{activity.active}}">
 					<td><a class="btn btn-success text-white" id="start_{{activity.id}}" style="display:flexbox;">Start</a><input type="submit" class="btn btn-primary text-white" form='stopwatches' id="pause_{{activity.id}}" name="pause_{{activity.id}}" style="display: none;" value="Pause"><input type="submit" class="btn btn-danger text-white" form='stopwatches' id="stop_{{activity.id}}" name="stop_{{activity.id}}" style="display:flexbox;" value="Clear"></a></td>
-					<td><a class="btn btn-sm btn-outline-dark finishbutton" id='finishbutton_{{activity.id}}'>Finish</a><input type='hidden' class="finish" id='finish_{{activity.id}}' name='finish_{{activity.id}}' value='{{activity.finish}}'></td>
+					<td><a class="btn btn-sm btn-outline-dark finishbutton" href='#{{activity.id}}' id='finishbutton_{{activity.id}}'>Finish</a><input type='hidden' class="finish" id='finish_{{activity.id}}' name='finish_{{activity.id}}' value='{{activity.finish}}'></td>
 			</tr>
 				
 		  	{%endfor%}
@@ -523,9 +523,17 @@
 				</th>
 				
 			</tr>
-			<tr class="remaining_row">
+			<tr class="current_row">
 				<th scope="row">
 					<td><p class="lead">Current:</p></td>
+					<td><span id='currentduration'>00:00:00</span> <span id='overtime'></span></td>
+					<td></td>
+					<td></td>
+				</th>
+			</tr>
+			<tr class="remaining_row">
+				<th scope="row">
+					<td><p class="lead">Remaining:</p></td>
 					<td><span id='remainingduration'>00:00:00</span></td>
 					<td></td>
 					<td></td>
